remove dividing lines between runs

--- a/app/views/teams/show/_recent_activity.html.erb
+++ b/app/views/teams/show/_recent_activity.html.erb
@@ -3,7 +3,7 @@
   <p class="text-soft">Recent runs by members of this team.</p>
 </div>
 
-<div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
+<div class="mb-10">
   <% recent_runs =  team.recent_runs %>
   <% if recent_runs.present? %>
     <% recent_runs.each do |run| %>
