--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -10,7 +10,7 @@
   <% end %>
 </div>
 
-<div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
+<div class="mb-10">
   <% if runs_today.present? %>
     <% runs_today.each do |run| %>
       <%= render run %>
