--- a/app/views/teams/show/_featured.html.erb
+++ b/app/views/teams/show/_featured.html.erb
@@ -3,7 +3,7 @@
   <p class="text-soft">Recent long runs and streaks by members of this team.</p>
 </div>
 
-<div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
+<div class="mb-10">
   <% featured_runs = team.featured_runs %>
   <% if featured_runs.present? %>
     <% featured_runs.each do |run| %>
