--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -27,7 +27,7 @@
   <div class="pb-6 mt-10 space-y-2 border-b dark:border-slate-700">
     <h1 class="heading">Runs <%= @date_range.titlecase %></h1>
   </div>
-  <div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
+  <div class="mb-10">
     <% if @runs.present? %>
       <%= render @runs %>
     <% else %>
