--- a/app/views/users/_runs_list.html.erb
+++ b/app/views/users/_runs_list.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b dark:border-slate-700">
   <h1 class="heading"><%= @title %></h1>
 </div>
-<div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
+<div class="mb-10">
   <% if @runs.present? %>
     <%= render @runs %>
   <% else %>
