--- a/app/views/teams/show/_recent_activity.html.erb
+++ b/app/views/teams/show/_recent_activity.html.erb
@@ -11,7 +11,7 @@
     <% end %>
   <% else %>
     <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <p class="prose dark:prose-invert text-soft">No recent activity to show.</p>
+      <p class="text-soft">No recent activity to show.</p>
     </div>
   <% end %>
 </div>
