--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -32,7 +32,7 @@
       <%= render @runs %>
     <% else %>
       <div class="flex flex-col items-center justify-center gap-6 py-12">
-        <p class="prose dark:prose-invert text-soft">No runs found for the selected date range.</p>
+        <p class="text-soft">No runs found for the selected date range.</p>
       </div>
     <% end %>
   </div>
