--- a/app/views/teams/show/_member_list.html.erb
+++ b/app/views/teams/show/_member_list.html.erb
@@ -1,3 +1,3 @@
 <% members.each do |member| %>
-  <%= render 'teams/show/member', member: member %>
+  <%= render 'teams/show/member', team: team, member: member %>
 <% end %>
