--- a/app/views/teams/show/_members.html.erb
+++ b/app/views/teams/show/_members.html.erb
@@ -17,7 +17,7 @@
 <%= turbo_frame_tag 'teamMembers' do %>
   <div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
     <% if members.present? %>
-      <%= render 'teams/show/member_list', members: members %>
+      <%= render 'teams/show/member_list', team: team, members: members %>
     <% else %>
       <div class="flex flex-col items-center justify-center gap-6 py-12">
         <p class="prose dark:prose-invert text-soft">No team members found.</p>
