--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -81,7 +81,7 @@
           <%= settings_form.check_box :include_saturday, { checked: @team.include_saturday_in_streak?, class: "form-input-checkbox", data: { restore_defaults_target: 'includeSaturday' } }, true, false %>
           <%= settings_form.label :include_saturday, 'Include Saturdays', class: "select-none text-sm text-slate-700 dark:text-slate-300" %>
         </div>
-        <p class="my-1 help-text">Check this box if you want to allow Saturdays to reset your team member's run streaks.</p>
+        <p class="my-1 help-text">Check this box to allow Saturdays to reset your team member's run streaks.</p>
       </div>
 
       <div>
@@ -89,7 +89,7 @@
           <%= settings_form.check_box :include_sunday, { checked: @team.include_sunday_in_streak?, class: "form-input-checkbox", data: { restore_defaults_target: 'includeSunday' } }, true, false %>
           <%= settings_form.label :include_sunday, 'Include Sundays', class: "select-none text-sm text-slate-700 dark:text-slate-300" %>
         </div>
-        <p class="my-1 help-text">Check this box if you want to allow Sundays to reset your team member's run streaks.</p>
+        <p class="my-1 help-text">Check this box to allow Sundays to reset your team member's run streaks.</p>
       </div>
     </div>
 
