--- a/app/views/teams/forms/_edit_settings.html.erb
+++ b/app/views/teams/forms/_edit_settings.html.erb
@@ -117,7 +117,7 @@
   </div>
 
   <div class="sticky bottom-0 flex items-center gap-6 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
-    <%= form.submit "Save settings", data: { turbo: false }, class: "btn btn-primary mr-auto" %>
-    <%= link_to "Cancel", :back, class: "btn btn-white", data: { turbo: false } %>
+    <%= form.submit 'Save settings', class: 'btn btn-primary mr-auto', data: { turbo: false } %>
+    <%= link_to 'Cancel', :back, class: 'btn btn-white', data: { turbo: false } %>
   </div>
 <% end %>
