--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -96,12 +96,7 @@
   </div>
 
   <div class="sticky bottom-0 flex items-center gap-6 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700 flex-wrap justify-start">
-    <% if form.object.new_record? %>
-      <%= form.submit 'Create team', data: { turbo: false }, class: 'btn btn-primary' %>
-    <% else %>
-      <%= form.submit 'Update team', data: { turbo: false }, class: 'btn btn-primary' %>
-    <% end %>
-
+    <%= form.submit form.object.new_record? ? 'Create team' : 'Update team', data: { turbo: false }, class: 'btn btn-primary mr-auto' %>
     <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white' %>
   </div>
 <% end %>
