--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -17,7 +17,12 @@
       <%= button_to 'Delete team',
                     @team,
                     method: :delete,
-                    data: { turbo: false },
+                    data: {
+                      turbo: false,
+                      controller: 'confirmation',
+                      action: 'confirmation#confirm',
+                      confirmation_message_value: 'Are you sure you want to delete this team?'
+                    },
                     class: 'btn btn-destructive btn-outline' if current_user.owns?(@team) %>
       <%= link_to 'Edit personal goals', edit_team_team_membership_path(@team, current_user), data: { turbo: false }, class: 'btn btn-white sm:ml-auto' if current_user.member_of?(@team) %>
     </div>
