--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,25 +2,25 @@
   <div class="text-center">
     <h1 class="heading my-3">Sign up for an account</h1>
     <p class="mb-6 text-slate-700 dark:text-slate-200">
-      Already have an account? <%= link_to "Sign in", new_session_path(resource_name), class: "btn-link" %>
+      Already have an account? <%= link_to 'Sign in', new_session_path(resource_name), class: 'btn-link' %>
     </p>
   </div>
 <% end %>
 
 <%= render 'auth_layout' do %>
-  <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: "form-validation" }, html: { novalidate: true } do |f| %>
+  <%= form_for resource, as: resource_name, url: registration_path(resource_name), data: { controller: 'form-validation' }, html: { novalidate: true } do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="form-group">
       <%= f.label :email, class: 'form-label' %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-input', data: { form_validation_target: "email", action: "input->form-validation#validateEmail" } %>
-      <span class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</span>
+      <p class="error-message hidden my-1" data-form-validation-target="emailError">Invalid email address</p>
     </div>
 
     <div class="form-group">
       <%= f.label :username, class: 'form-label' %>
       <%= f.text_field :username, autocomplete: 'username', class: 'form-input', data: { form_validation_target: "username", action: "input->form-validation#validateUsername" } %>
-      <span class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</span>
+      <p class="error-message hidden my-1" data-form-validation-target="usernameError">Username can only contain lowercase letters, numbers, underscores, and periods and must be at least 3 characters long</p>
     </div>
 
     <div class="form-group relative">
@@ -57,9 +57,9 @@
         </button>
       </div>
 
-      <span class="error-message hidden my-1" data-form-validation-target="passwordConfirmationError">Passwords do not match</span>
+      <p class="error-message hidden my-1" data-form-validation-target="passwordConfirmationError">Passwords do not match</p>
     </div>
 
-    <%= f.submit "Sign up", data: { turbo: false }, class: 'btn btn-primary w-full' %>
+    <%= f.submit 'Sign up', data: { turbo: false }, class: 'btn btn-primary w-full' %>
   <% end %>
 <% end %>
