--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,7 +1,8 @@
 <% if resource.errors.any? %>
   <div class="flex p-4 my-6 text-sm text-red-800 border border-red-300 rounded-lg bg-red-50 dark:bg-slate-800 dark:text-red-400 dark:border-red-800">
-    <%= inline_svg_tag 'icons/x-circle.svg', class: 'size-5 mr-2' %>
+    <%= inline_svg_tag 'icons/x-circle.svg', class: 'size-5 shrink-0 mr-2' %>
     <span class="sr-only">Error</span>
+
     <div>
       <span class="font-medium">
         <%= I18n.t("errors.messages.not_saved",
@@ -9,7 +10,7 @@
                   resource: resource.class.model_name.human.downcase)
         %>
       </span>
-      <ul class="mt-1.5 list-disc list-inside">
+      <ul class="mt-1.5 list-disc ml-4">
         <% resource.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
