--- a/app/views/teams/show/_trends.html.erb
+++ b/app/views/teams/show/_trends.html.erb
@@ -6,7 +6,7 @@
 <p class="text-right"><%= link_to 'View your personal trends', team_member_path(team, current_user, tab: 'trendsTab'), class: 'btn-link text-xs' %></p>
 
 <div>
-  <%= form_with url: team_path(team), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'teamTrends', turbo_action: 'advance', turbo_stream: true, controller: 'custom-date-range form-validation' } do %>
+  <%= form_with url: team_path(team), method: :get, local: true, html: { novalidate: true }, data: { turbo_frame: 'teamTrends', turbo_action: 'advance', turbo_stream: true, controller: 'custom-date-range form-validation search-form' } do %>
     <div class="form-group">
       <%= label_tag :trends_date_range, 'Select date range', class: 'form-label' %>
       <%= select_tag :trends_date_range, options_for_select(['All season', 'This week', 'Last week', 'This month', 'Last month', 'Custom range'], params[:trends_date_range] || 'This week'), data: { custom_date_range_target: 'select', action: 'custom-date-range#update custom-date-range#search' }, class: 'form-select' %>
@@ -21,6 +21,11 @@
       <%= label_tag :trends_end_date, 'End date', class: 'form-label' %>
       <%= date_field_tag :trends_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'endDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
       <span class="hidden my-1 error-message" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag :chart_type, 'Chart type', class: 'form-label' %>
+      <%= select_tag :chart_type, options_for_select([['Column', 'column'], ['Line', :line], ['Bar', 'bar']], @chart_type || 'column'), data: { action: 'input->search-form#searchNow' }, class: 'form-select' %>
     </div>
   <% end %>
 
