--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -172,23 +172,40 @@
   </div>
 
   <div class="sticky bottom-0 flex items-center gap-4 pt-6 pb-6 bg-white border-t dark:bg-slate-900 border-slate-200 dark:border-slate-700">
-    <%= f.submit 'Save changes', data: { turbo: false }, class: 'btn btn-primary' %>
-    <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white mr-auto' %>
-    <%= link_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: 'btn btn-destructive' %>
+    <%= f.submit 'Save changes', data: { turbo: false }, class: 'btn btn-primary mr-auto' %>
+    <%= link_to 'Cancel', :back, data: { turbo: false }, class: 'btn btn-white' %>
   </div>
 <% end %>
 
-<div class="pt-10 my-10 text-center border-t border-slate-200 dark:border-slate-700">
-  <p>Not happy with your experience?</p>
-  <%= button_to 'Cancel your account', registration_path(resource_name),
-              method: :delete,
-              class: 'text-slate-400 hover:text-slate-600 font-semibold text-sm',
-              form: {
-                data: {
-                  turbo: false,
-                  controller: 'confirmation',
-                  action: 'submit->confirmation#confirm',
-                  confirmation_message_value: 'Are you sure you want to delete your account? This action cannot be undone.'
-                }
-              } %>
+<div class="pt-6 border-t border-slate-200 dark:border-slate-700">
+  <h2 class="mb-2 text-lg font-bold text-slate-700 dark:text-slate-200">Danger Zone</h2>
+</div>
+
+<div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+  <div class="flex flex-wrap gap-4 items-center justify-between pb-6 border-b dark:border-slate-700">
+    <div class="max-w-md">
+      <p class="font-bold">Sign out</p>
+      <p class="help-text">After signing out, you will have to enter your username and password again to access your account.</p>
+    </div>
+    <%= button_to 'Sign out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: 'btn btn-destructive btn-outline whitespace-nowrap' %>
+  </div>
+
+  <div class="flex flex-wrap gap-4 items-center justify-between pt-6">
+    <div>
+      <p class="font-bold">Delete your account</p>
+      <p class="help-text">Once you delete your account, there is no going back.</p>
+    </div>
+    <%= button_to 'Delete my account',
+                  registration_path(resource_name),
+                  method: :delete,
+                  class: 'btn btn-destructive whitespace-nowrap',
+                  form: {
+                    data: {
+                      turbo: false,
+                      controller: 'confirmation',
+                      action: 'submit->confirmation#confirm',
+                      confirmation_message_value: 'Are you sure you want to delete your account?'
+                    }
+                  } %>
+  </div>
 </div>
