--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   </head>
 
   <body class='relative antialiased font-normal leading-normal bg-white text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 dark:bg-slate-900'>
-    <%= render "shared/flash" if user_signed_in? ? current_user.settings(:notifications).in_app : true %>
+    <%= render "shared/flash" %>
     <div class="flex w-full h-svh max-h-svh">
       <%= render "shared/sidebar" if user_signed_in? %>
       <div class="flex flex-col flex-1 h-full min-w-0">
