--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -13,14 +13,14 @@
       <div class="lg:text-center">
         <p class="text-soft">Start Date</p>
         <p class="text-2xl font-semibold">
-          <%= pretty_date(team.season_start_date, format: :short) %>
+          <%= pretty_date(team.season_start_date, month_format: :short, date_style: :absolute) %>
         </p>
       </div>
 
       <div class="lg:text-center">
         <p class="text-soft">End Date</p>
         <p class="text-2xl font-semibold">
-          <%= pretty_date(team.season_end_date, format: :short) %>
+          <%= pretty_date(team.season_end_date, month_format: :short, date_style: :absolute) %>
         </p>
       </div>
     </div>
