--- a/app/views/teams/member/_member_info.html.erb
+++ b/app/views/teams/member/_member_info.html.erb
@@ -1,6 +1,8 @@
+<% member_is_current = member == current_user %>
+
 <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading">Member Info</h1>
-  <p class="text-soft">Information and statistics about <%= member == current_user ? 'your' : "#{member.first_name}'s" %> participation in <%= link_to team.name, team, class: 'btn-link' %>.</p>
+  <p class="text-soft">Information and statistics about <%= member_is_current ? 'your' : "#{member.first_name}'s" %> participation in <%= link_to team.name, team, class: 'btn-link' %>.</p>
 </div>
 
 <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
@@ -92,19 +94,19 @@
 
     <p class='my-1 text-xs text-soft'>
       <% if team_membership.mileage_goal_complete? %>
-        <%= member == current_user ? 'You met your' : "#{member.first_name} met #{member.gender_possessive}" %> <%= team.mileage_goal %> personal mileage goal with <%= pluralize(team.days_remaining_in_season, 'day') %> to spare!
+        <%= member_is_current ? 'You met your' : "#{member.first_name} met #{member.gender_possessive}" %> <%= team_membership.mileage_goal %> mile personal mileage goal with <%= pluralize(team.days_remaining_in_season, 'day') %> to spare!
       <% else %>
-        <%= member == current_user ? 'You have' : "#{member.first_name} has" %> <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team_membership.miles_remaining_in_goal, 'mile') %> of your personal mileage goal.
+        <%= member_is_current ? 'You have' : "#{member.first_name} has" %> <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team_membership.miles_remaining_in_goal, 'mile') %> of <%= member_is_current ? 'your' : member.gender_possessive %> personal mileage goal.
       <% end %>
     </p>
   <% elsif team.season_not_started_yet? %>
     <p class="text-soft">Season hasn't started yet.</p>
   <% elsif team.season_dates? %>
-    <p class="text-soft"><%= member == current_user ? 'You have' : "#{member.first_name} has" %> not set a personal mileage goal.</p>
+    <p class="text-soft"><%= member_is_current ? 'You have' : "#{member.first_name} has" %> not set a personal mileage goal.</p>
   <% elsif team_membership.mileage_goal? %>
     <p class="text-soft">No season dates have been set for this team.</p>
   <% else %>
-    <p class="text-soft"><%= member == current_user ? 'You have' : "#{member.first_name} has" %> not set a personal mileage goal and season dates have not been set for this team.</p>
+    <p class="text-soft"><%= member_is_current ? 'You have' : "#{member.first_name} has" %> not set a personal mileage goal and season dates have not been set for this team.</p>
   <% end %>
 </div>
 
@@ -118,18 +120,18 @@
 
     <p class='my-1 text-xs text-soft'>
       <% if team_membership.long_run_goal_complete? %>
-        <%= member == current_user ? 'You met your' : "#{member.first_name} met #{member.gender_possessive}" %> <%= team.long_run_goal %> personal long run goal with <%= pluralize(team.days_remaining_in_season, 'day') %> to spare!
+        <%= member_is_current ? 'You met your' : "#{member.first_name} met #{member.gender_possessive}" %> <%= team.long_run_goal %> personal long run goal with <%= pluralize(team.days_remaining_in_season, 'day') %> to spare!
       <% else %>
-        <%= member == current_user ? 'You have' : "#{member.first_name} has" %> <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team_membership.long_runs_remaining_in_goal, 'long run') %> of <%= member == current_user ? 'your' : member.gender_possessive %> personal long run goal.
+        <%= member_is_current ? 'You have' : "#{member.first_name} has" %> <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team_membership.long_runs_remaining_in_goal, 'long run') %> of <%= member_is_current ? 'your' : member.gender_possessive %> personal long run goal.
       <% end %>
     </p>
   <% elsif team.season_not_started_yet? %>
     <p class="text-soft">Season hasn't started yet.</p>
   <% elsif team.season_dates? %>
-    <p class="text-soft"><%= member == current_user ? 'You have' : "#{member.first_name} has" %> not set a personal long run goal.</p>
+    <p class="text-soft"><%= member_is_current ? 'You have' : "#{member.first_name} has" %> not set a personal long run goal.</p>
   <% elsif team_membership.long_run_goal? %>
     <p class="text-soft">No season dates have been set for this team.</p>
   <% else %>
-    <p class="text-soft"><%= member == current_user ? 'You have' : "#{member.first_name} has" %> not set a personal long run goal and season dates have not been set for this team.</p>
+    <p class="text-soft"><%= member_is_current ? 'You have' : "#{member.first_name} has" %> not set a personal long run goal and season dates have not been set for this team.</p>
   <% end %>
 </div>
