--- a/app/assets/stylesheets/custom/buttons.css
+++ b/app/assets/stylesheets/custom/buttons.css
@@ -56,6 +56,10 @@
   }
 
   .btn-link {
-    @apply text-indigo-600 font-semibold focus:ring-transparent hover:text-indigo-700 dark:text-indigo-400 dark:hover:text-indigo-500;
+    @apply text-indigo-600 font-semibold focus:ring-transparent hover:text-indigo-700 dark:text-indigo-400 dark:hover:text-indigo-500 cursor-pointer;
+  }
+
+  .btn-link-soft {
+    @apply text-soft font-semibold focus:ring-transparent hover:text-slate-600 dark:hover:text-slate-500 transition duration-200 ease-in-out cursor-pointer;
   }
 }
