--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,7 @@
         <%= render "shared/tab_bar" if user_signed_in? %>
       </div>
     </div>
+
+    <%= turbo_stream_from "pinned_pages_list" %> <!-- Enables Turbo Stream for the pinned pages list -->
   </body>
 </html>
